add lint:fix and format:fix

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix",
     "format": "turbo format",
+    "format:fix": "turbo format:fix",
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
