--- a/turbo.json
+++ b/turbo.json
@@ -20,7 +20,14 @@
     "format": {
       "outputs": ["node_modules/.cache/.prettiercache"]
     },
+    "format:fix": {
+      "outputs": ["node_modules/.cache/.prettiercache"]
+    },
     "lint": {
+      "dependsOn": ["^topo"],
+      "outputs": ["node_modules/.cache/.eslintcache"]
+    },
+    "lint:fix": {
       "dependsOn": ["^topo"],
       "outputs": ["node_modules/.cache/.eslintcache"]
     },
