--- a/tooling/prettier-config/package.json
+++ b/tooling/prettier-config/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "format": "prettier --cache --ignore-path .prettierignore --check ../../",
     "format:fix": "prettier --cache --ignore-path .prettierignore --write ../../",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "typecheck": "tsc --noEmit"
+  },
+  "eslintConfig": {
+    "extends": "@repo/eslint-config"
   },
   "dependencies": {
     "prettier": "^3.1.1",
     "prettier-plugin-jsdoc": "^1.3.0"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
     "prettier-plugin-packagejson": "^2.4.9"
   }
