--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "turbo": "^1.11.3",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
