add tailwindcss to ui library for autocomplete

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
     "@types/node": "^20",
     "autoprefixer": "^10.0.1",
