--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/tsconfig": "workspace:*"
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
+    "tailwindcss": "^3.4.1"
   }
 }
