--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,9 +9,7 @@
     "typecheck": "tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": [
-      "@repo/eslint-config"
-    ]
+    "extends": "@repo/eslint-config"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
