--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,14 +10,13 @@
     "typecheck": "tsc --noEmit"
   },
   "eslintConfig": {
-    "extends": [
-      "@repo/eslint-config"
-    ],
+    "extends": "@repo/eslint-config",
     "rules": {
       "react/react-in-jsx-scope": "off"
     }
   },
   "dependencies": {
+    "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
     "next": "14.0.4"
   },
