--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
+    "db:generate": "turbo db:generate",
+    "db:push": "turbo db:push",
+    "db:start": "turbo db:start",
     "dev": "turbo dev",
     "format": "turbo format",
     "format:fix": "turbo format:fix",
@@ -10,14 +13,14 @@
     "lint:fix": "turbo lint:fix",
     "typecheck": "turbo typecheck"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "turbo": "^1.11.3",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   }
 }
