--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,9 @@
       "persistent": true,
       "cache": false
     },
+    "db:stop": {
+      "cache": false
+    },
     "db:generate": {
       "cache": false
     },
