--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,14 +16,23 @@
     }
   },
   "dependencies": {
+    "@repo/api": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
-    "next": "14.0.4"
+    "@tanstack/react-query": "^5.17.7",
+    "@tanstack/react-query-devtools": "^5.17.7",
+    "@tanstack/react-query-next-experimental": "5.17.7",
+    "@trpc/client": "11.0.0-next-alpha.170",
+    "@trpc/react-query": "11.0.0-next-alpha.170",
+    "@trpc/server": "11.0.0-next-alpha.170",
+    "next": "14.0.4",
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
+    "@repo/types": "workspace:*",
     "@types/node": "^20",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
