--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     }
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@repo/api": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
@@ -25,15 +26,18 @@
     "@trpc/client": "11.0.0-next-alpha.170",
     "@trpc/react-query": "11.0.0-next-alpha.170",
     "@trpc/server": "11.0.0-next-alpha.170",
+    "argon2": "^0.31.2",
     "next": "14.0.4",
-    "superjson": "^2.2.1"
+    "react-hook-form": "^7.49.3",
+    "superjson": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
     "@repo/types": "workspace:*",
-    "@types/node": "^20",
+    "@types/node": "^20.11.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
