--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@repo/api",
   "private": true,
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./session": "./src/session.ts",
+    "./schemas/auth": "./src/schemas/auth.ts"
+  },
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -14,12 +17,14 @@
   "dependencies": {
     "@repo/db": "workspace:*",
     "@trpc/server": "11.0.0-next-alpha.170",
+    "argon2": "^0.31.2",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
-    "@repo/types": "workspace:*"
+    "@repo/types": "workspace:*",
+    "@types/node": "^20.11.0"
   }
 }
