--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "@types/react-dom": "^18.2.18",
     "turbo": "^1.11.3",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "pnpm@8.14.1"
 }
