--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@repo/api": "workspace:*",
     "@repo/db": "workspace:*",
+    "@repo/types": "workspace:*",
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.17.7",
     "@tanstack/react-query-devtools": "^5.17.7",
@@ -27,6 +28,7 @@
     "@trpc/react-query": "11.0.0-next-alpha.170",
     "@trpc/server": "11.0.0-next-alpha.170",
     "argon2": "^0.31.2",
+    "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react-hook-form": "^7.49.3",
     "superjson": "^2.2.1",
