--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "turbo dev",
     "format": "turbo format",
     "format:fix": "turbo format:fix",
+    "postinstall": "turbo db:generate",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
     "typecheck": "turbo typecheck"
