--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,8 +2,10 @@
   "name": "@repo/ui",
   "private": true,
   "exports": {
+    "./components/avatar": "./src/components/avatar.tsx",
     "./components/button": "./src/components/button.tsx",
     "./components/card": "./src/components/card.tsx",
+    "./components/dropdown-menu": "./src/components/dropdown-menu.tsx",
     "./components/form": "./src/components/form.tsx",
     "./components/input": "./src/components/input.tsx",
     "./components/label": "./src/components/label.tsx",
@@ -24,6 +26,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
