refactor @repo/types into utils package

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "build": "turbo build",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push",
-    "db:start": "turbo db:start --concurrency 11",
+    "db:start": "turbo db:start",
     "db:stop": "turbo db:stop",
-    "dev": "turbo dev --concurrency 11",
+    "dev": "turbo dev",
     "format": "turbo format",
     "format:fix": "turbo format:fix",
     "postinstall": "turbo db:generate",
