refactor pages into (with-navbar) group

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/utils",
   "private": true,
   "exports": {
-    "./number-format": "./src/number-format.ts",
+    "./str": "./src/str.ts",
     "./types": "./src/types.ts"
   },
   "scripts": {
