--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
+    "@types/node": "^20.11.0",
     "prisma": "^5.8.1"
   }
 }
