--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "react-hook-form": "^7.49.3",
+    "react-spinners": "^0.13.8",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
