--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
     "@repo/utils": "workspace:*",
     "@trpc/server": "11.0.0-next-alpha.170",
     "argon2": "^0.31.2",
+    "aws-sdk": "^2.1540.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
