--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "twitter",
   "private": true,
   "scripts": {
-    "build": "turbo build",
-    "db:generate": "turbo db:generate",
-    "db:push": "turbo db:push",
-    "db:start": "turbo db:start",
-    "db:stop": "turbo db:stop",
-    "dev": "turbo dev",
-    "format": "turbo format",
-    "format:fix": "turbo format:fix",
-    "postinstall": "turbo db:generate",
-    "lint": "turbo lint",
-    "lint:fix": "turbo lint:fix",
-    "typecheck": "turbo typecheck"
+    "build": "turbo build --concurrency 11",
+    "db:generate": "turbo db:generate --concurrency 11",
+    "db:push": "turbo db:push --concurrency 11",
+    "db:start": "turbo db:start --concurrency 11",
+    "db:stop": "turbo db:stop --concurrency 11",
+    "dev": "turbo dev --concurrency 11",
+    "format": "turbo format --concurrency 11",
+    "format:fix": "turbo format:fix --concurrency 11",
+    "postinstall": "turbo db:generate --concurrency 11",
+    "lint": "turbo lint --concurrency 11",
+    "lint:fix": "turbo lint:fix --concurrency 11",
+    "typecheck": "turbo typecheck --concurrency 11"
   },
   "dependencies": {
     "react": "^18.2.0",
