--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.17.7",
     "@tanstack/react-query-devtools": "^5.17.7",
     "@tanstack/react-query-next-experimental": "5.17.7",
+    "@tanstack/react-query-persist-client": "^5.17.19",
     "@trpc/client": "11.0.0-next-alpha.170",
     "@trpc/react-query": "11.0.0-next-alpha.170",
     "@trpc/server": "11.0.0-next-alpha.170",
