--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,8 +5,10 @@
     "./components/avatar": "./src/components/avatar.tsx",
     "./components/button": "./src/components/button.tsx",
     "./components/card": "./src/components/card.tsx",
+    "./components/dialog": "./src/components/dialog.tsx",
     "./components/dropdown-menu": "./src/components/dropdown-menu.tsx",
     "./components/form": "./src/components/form.tsx",
+    "./components/image": "./src/components/image.tsx",
     "./components/input": "./src/components/input.tsx",
     "./components/label": "./src/components/label.tsx",
     "./components/spinner": "./src/components/spinner.tsx",
@@ -30,6 +32,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -37,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.309.0",
+    "next": "14.0.4",
     "react-hook-form": "^7.49.3",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.0",
