--- a/tooling/prettier-config/package.json
+++ b/tooling/prettier-config/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "prettier": "^3.1.1",
-    "prettier-plugin-jsdoc": "^1.3.0"
+    "prettier-plugin-jsdoc": "^1.3.0",
+    "prettier-plugin-packagejson": "^2.4.12",
+    "prettier-plugin-tailwindcss": "^0.5.12"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/tsconfig": "workspace:*",
-    "prettier-plugin-packagejson": "^2.4.9"
+    "@repo/tsconfig": "workspace:*"
   }
 }
