--- a/tooling/eslint-config/package.json
+++ b/tooling/eslint-config/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
+    "eslint-plugin-perfectionist": "^2.7.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.1"
