change tsdk in vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
   },
   "prettier.configPath": "tooling/prettier-config/index.cjs",
   "prettier.ignorePath": "tooling/prettier-config/.prettierignore",
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   }
